stylesheet.less
/* ... */
.template-phone {
	float: left;
	text-align: right;
	width: 30%;
	padding: 10px 25px 11px;
	h2 {
		font-family:@font-swatch6-font-family;
		font-weight: @font-swatch6-font-weight;
		color:@font-swatch6-color;
		line-height:@font-swatch6-line-height;
		letter-spacing: @font-swatch6-letter-spacing;
		font-size: @font-swatch6-font-size;
		padding-bottom: 0;
	}
}

.header-main {
	padding: 20px 0px;
}

.header-sub {
	background-color: @color-swatch7;
	float: left;
	width: 100%;
}

.template-feature {
	position: fixed;
	height: 100%;
	width: 25%;
	.widget.feature,
	.widget.feature .feature-bgimg {
		height: 100%;
	}
}

.template-aside, .widget.logo {
	float: left;
	.bk-content-text {
		display: inline;
	}
}

.feature-btn {
	display: block;
}

.widget.feature .feature-bgimg .content button.btn {
	background-color: lighten(@color-swatch2, 10%);
	&:hover {
		background-color: darken(@color-swatch2, 10%);
	}
}

.header-feature {
	position: relative;
	overflow: hidden;
	height: 300px;
	h2 span, h3 span {
		background: @color-swatch7;
		padding: 5px 14px;
	}
}
.widget.feature h2 {
	padding-bottom: 0;
}
.widget.feature .feature-bgimg .content h3 {
	display: inline-block;
	text-indent: @font-swatch9-letter-spacing;
	padding-top: 10px;
}

.widget.feature .feature-bgimg .content {
	display: block;
	padding: 75px 20px 0 20px;
	margin: 0 auto;
}

// 3. Navigation
.nav {
	font-family: 'Oswald', sans-serif;
	position: relative;
	ul {
		display: block;
		width: 100%;
		padding: 0;
		margin: 0;
		list-style: none;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
	}
	li {
		display: inline-block;
	}
	a {
		padding: 20px 25px;
		display: inline-block;
	}
}

.template-nav {
	float: left;
	width: 70%;
	min-height: 49px;
}

.widget .extendednavigation ul {
	margin: 0 auto;
	float: none;
	li {
		float: none;
		text-align: center;
		display: inline-block;
		a, > .text {
			padding: 8px 10px 11px;
			font-family:@font-swatch6-font-family;
			font-weight: @font-swatch6-font-weight;
			color:@font-swatch6-color;
			line-height:@font-swatch6-line-height;
			letter-spacing: @font-swatch6-letter-spacing;
			font-size: @font-swatch6-font-size;
			&:hover {
				color:@color-swatch4;
			}
		}
	}
	li.folder {
		margin-right: 0;
		padding-right: 10px;
		.text:hover {
			color:@color-swatch4;
		}
	}
	li.folder:after {
		right: 8px;
		top: 43%;
		border-top-color: @font-swatch6-color;
	}
	li.folder:hover {
		ul {
			min-width: 150px;
			background-color: @color-swatch7;
			left: 0;
		}
		&:after {
			border-top-color: @color-swatch4;
		}
	}
}

.widget .extendednavigation a.pull {
	width: 30px;
	height: 30px;
	top: 10px;
	right: 18px;
	&:after {
		background-color: @color-swatch2;
		box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
		left: 4px;
		top: 7px;
		width: 22px;
	}
}


// 4. Home
// Nothing to see here

// 5. Menu
.widget.menu {
	border: none;
	h1 {
		position: relative;
		padding-bottom: 0;
	}
	h2 {
		position: relative;
		display: inline-block;
	}
	.menu-header {
		margin-bottom: 14px;
		float: left;
		width: 100%;
		text-align: center;
		overflow: hidden;
		p {
			position: relative;
			display: inline-block;
			font-size: bkscale(@font-swatch6-font-size, 0.85);
			letter-spacing:@font-swatch6-letter-spacing;
			font-weight: @font-swatch2-font-weight;
			padding: 0 30px;
			&:before, &:after {
				position: absolute;
				content: "";
				display: block;
				position: absolute;
				width: 1000%;
				top: 50%;
				height: 2px;
				background: darken(@color-swatch1, 5%);
			}
			&:before {
				right: 100%;
			}
			&:after {
				left: 100%;
			}
		}
	}
}

.menu-items {
	clear: both;
	text-align: center;
}

.menu-subsection .menu-subsection-promoted .menu-items {
	background: lighten(@color-swatch5, 75%);
	border: 1px solid lighten(@color-swatch5, 50%);
	border-radius: 3px;
}

.menu-item {
	padding: 10px 40px;
	float: left;
	width: 100%;
}

.menu-item-image-wrap {
	margin-bottom: 5px;
}

.menu-item-price {
	padding-bottom: 8px;
	p {
		font-family:@font-swatch6-font-family;
		font-size: bkscale(@font-swatch6-font-size, 0.9);
		color: darken(@color-swatch5, 30%);
		font-weight:@font-swatch6-font-weight;
		letter-spacing:@font-swatch6-letter-spacing;
	}
}

.menu .menu-subsection {
	padding: 0;
	margin-bottom: 40px;
}

.menu-subsection-name {
	color: @color-swatch4;
}

.menu-item-promoted,
.blog-post-metadata,
.menu-subsection .menu-items {
	background: lighten(@color-swatch1, 5%);
	border: 1px solid darken(@color-swatch1, 15%);
	border-radius: 3px;
}

.menu-subsection .menu-items {
	padding: 0 15px;
}

.menu .menu-items li {
	padding: 5px 0 12px;
	margin-bottom: 20px;
	&.menu-item-promoted {
		padding: 5px 15px 12px;
	}
}

.inner-item {
	padding: 15px 0;
}

.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	padding: 1px 5px 1px 0;
	&:before, &:after {
		color: @color-swatch2;
	}
	&:before {
		content: "\2605";
	}
}

.menu-item-description {
	padding-bottom: 10px;
}

.widget.menusections {
	text-align: center;
	margin-left: 0;
	margin-right: 0;
	.menu-section-list {
		border-bottom: 1px solid darken(@color-swatch1, 5%);
	}
	ul li {
		margin: 0;
	}
	a {
		padding: 10px 20px;
	}
}

// 6. Blog List
.blog-post-item {
	padding-bottom: 20px;
}

.widget.blogpostlist,
.blogpost-page .blog-post-item {
	padding: 20px 0;
}

div.blog-post-feature-image-wrap {
	height: 350px;
	margin-bottom: 20px;
}

.blog-list-footer {
	text-align: center;
	clear: both;
	a {
		margin: 0 20px;
	}
}

.blog-post-item {
	padding-bottom: 40px;
	clear: both;
}


// 7. Blog Post
.blog-post-metadata {
	padding: 10px 20px;
	margin-top: 10px;
	time, p {
		color: lighten(@color-swatch5, 10%);
	}
}
/* ... */

